tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/bool/just-t.stderr
TOML parse error at line 1, column 5
  |
1 | a = t
  |     ^
invalid string
expected `"`, `'`
